# arm_cross

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json
.github/workflows/: ci.yml  copilot-setup-steps.yml
examples/: fake_uart_device.py
scripts/: check.sh
src/: sort.c
tests/: test_pty.py  test_serial.py  test_tcp.py
uart_terminal/: __init__.py  __main__.py  cli.py  terminal.py
